force-app/main/default/objects/InputMNFProcess__c/InputMNFProcess__c.object-meta.xml
<CustomObject>
    <label>Input (MNF Process)</label>
    <nameField>
        <displayFormat>IP-{000000}</displayFormat>
        <label>Input (MNF Process)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Input (MNF Process)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>