force-app/main/default/objects/InputMNFProcess__c/fields/MNFProcess__c.field-meta.xml
<CustomField>
    <fullName>MNFProcess__c</fullName>
    <label>MNF Process</label>
    <referenceTo>ManufactureProcess__c</referenceTo>
    <relationshipName>MNF_Process_Stock_In</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>