force-app/main/default/objects/InputMNFProcess__c/fields/ProductStock__c.field-meta.xml
<CustomField>
    <fullName>ProductStock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product (Stock)</label>
    <referenceTo>Product_Stock__c</referenceTo>
    <relationshipName>MNF_Process_Stock_In</relationshipName>
    <type>Lookup</type>
</CustomField>