force-app/main/default/objects/InputMNFProcess__c/fields/Total_Buying__c.field-meta.xml
<CustomField>
    <fullName>Total_Buying__c</fullName>
    <formula>Quantity__c * UnitBuying__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buying</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>