force-app/main/default/objects/InputMNFProcess__c/fields/UnitBuying__c.field-meta.xml
<CustomField>
    <fullName>UnitBuying__c</fullName>
    <label>Unit Buying</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>